--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.4",
+    "chalk": "^4.1.2",
     "csv-writer": "^1.6.0",
     "jsforce": "^3.7.0",
     "readline": "^1.3.0"
